First daily commit and push.
* Renamed folders with spaces in their names.
* Used black to format files.
* Fixed any linting errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "Python3",
         "nitaghistorian",
         "linting"
-    ]
+    ],
+    "python.pythonPath": "C:\\Users\\edwar\\anaconda3\\envs\\python_3_9\\python.exe"
 }
