Update project to run tests via tox call to poetry call to pytest.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py38, py37
+envlist = py38, py37, py36
 
 [testenv]
 deps =
@@ -15,11 +15,10 @@ deps =
     setuptools
     coverage
     codecov
+whitelist_externals = poetry
 commands =
-    coverage run --source slmigrate -m pytest {posargs}
-    coverage report
-    # TODO make this fail under 100% coverage
-    # coverage report --fail-under 100
+    poetry install -v
+    poetry run pytest {posargs}
 passenv =
     ProgramW6432
     ProgramData
