--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
         "nitaghistorian",
         "linting"
     ],
-    "python.pythonPath": "C:\\Users\\edwar\\anaconda3\\envs\\python_3_9\\python.exe"
+    "python.pythonPath": "C:\\Users\\mbrnd\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
