added a version file

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -2,13 +2,13 @@ name: Publish Package to PyPI
 
 on:
   push:
-    tags:
-      - 'v*'
+    paths:
+      - VERSION
     branches:
       - main
   release:
     types:
-      - [created]
+      - published
 
 jobs:
   build-and-publish:
