--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nislmigrate"
-version = "0.0.1"
+version = "0.0.2"
 description = "The tool for migrating SystemLink data."
 authors = ["sedwards <shawn.edwards@ni.com>"]
 
@@ -12,6 +12,9 @@ pymongo = "^3.11.3"
 tox = "^3.23.0"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.scripts]
+nislmigrate = 'nislmigrate.main:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
