--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nislmigrate"
-version = "0.0.2"
+version = "0.0.3"
 description = "The tool for migrating SystemLink data."
 authors = ["sedwards <shawn.edwards@ni.com>"]
 
@@ -14,7 +14,7 @@ tox = "^3.23.0"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-nislmigrate = 'nislmigrate.main:main'
+nislmigrate = 'nislmigrate:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
