--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nislmigrate"
-version = "0.0.3"
+version = "0.0.4"
 description = "The tool for migrating SystemLink data."
 authors = ["sedwards <shawn.edwards@ni.com>"]
 
@@ -10,11 +10,12 @@ argparse = "^1.4.0"
 pytest = "^6.2.3"
 pymongo = "^3.11.3"
 tox = "^3.23.0"
+bson = "*"
 
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.scripts]
-nislmigrate = 'nislmigrate:main'
+nislmigrate = 'slmigrate:slmigrate'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
