--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,7 +3,7 @@ name: Publish Package to PyPI
 on:
   push:
     paths:
-      - VERSION
+      - pyproject.toml
     branches:
       - main
   release:
