--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nislmigrate"
-version = "0.0.11"
+version = "0.0.12"
 description = "The tool for migrating SystemLink data."
 authors = ["sedwards <shawn.edwards@ni.com>"]
 readme="README.md"
@@ -17,15 +17,14 @@ classifiers=[
 [tool.poetry.dependencies]
 python = "^3.6.8"
 argparse = "^1.4.0"
-pytest = "^6.2.3"
 pymongo = "^3.11.3"
-toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
-tox = "^3.23.0"
+tox = "*"
+pytest = "^6.2.3"
 
 [tool.poetry.scripts]
-nislmigrate = 'nislmigrate.entry:slmigrate'
+nislmigrate = 'nislmigrate.migration_tool:run_migration_tool'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
