--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "nislmigrate"
-version = "0.0.12"
+version = "0.0.13"
 description = "The tool for migrating SystemLink data."
 authors = ["sedwards <shawn.edwards@ni.com>"]
 readme="README.md"
-documentation="https://operations.systemlink.io/"
+documentation="https://github.com/ni/NI-SystemLink-Migration"
 classifiers=[
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Programming Language :: Python :: 3.7",
@@ -22,6 +22,16 @@ pymongo = "^3.11.3"
 [tool.poetry.dev-dependencies]
 tox = "*"
 pytest = "^6.2.3"
+codecov = "*"
+coverage = "*"
+flake8 = "*"
+autopep8 = "*"
+pytest-cov = "*"
+setuptools = "*"
+twine = "*"
+cli-test-helpers = "*"
+pymongo = "*"
+poetry = "*"
 
 [tool.poetry.scripts]
 nislmigrate = 'nislmigrate.migration_tool:run_migration_tool'
