--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,21 +17,12 @@ classifiers=[
 [tool.poetry.dependencies]
 python = "^3.6.8"
 argparse = "^1.4.0"
-pymongo = "^3.11.3"
+pymongo = "^3.12.0"
 
 [tool.poetry.dev-dependencies]
-tox = "*"
-pytest = "^6.2.3"
-codecov = "*"
-coverage = "*"
-flake8 = "*"
-autopep8 = "*"
-pytest-cov = "*"
-setuptools = "*"
-twine = "*"
-cli-test-helpers = "*"
-pymongo = "*"
-poetry = "*"
+tox = "^3.24.2"
+pytest = "^6.2.4"
+pyproject-flake8 = "^0.0.1a2"
 
 [tool.poetry.scripts]
 nislmigrate = 'nislmigrate.migration_tool:run_migration_tool'
@@ -42,3 +33,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length=100
+
+[tool.flake8]
+max-line-length=100
