--- a/.github/workflows/lint-and-test-action.yml
+++ b/.github/workflows/lint-and-test-action.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Linting and unit tests for SystemLink Migrate application
+name: Linting and unit tests for nislmigrate tool
 
 on:
   push:
@@ -11,16 +8,17 @@ on:
 
 jobs:
   build:
-
+    name: Build, lint, and run unit tests for nislmigrate
     runs-on: windows-2019
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Clone NI-SystemLink-Migration repository
+      uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install dependencies
+    - name: Install nislmigrate dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
@@ -28,7 +26,7 @@ jobs:
     - name: Install MongoDB
       run: |
         test/dlmongo.ps1
-    - name: Lint with pyproject flake8
+    - name: Lint with pflake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         poetry run pflake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
