--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers=[
 python = "^3.6.8"
 argparse = "^1.4.0"
 pymongo = "^3.12.0"
+logging = "*"
 
 [tool.poetry.dev-dependencies]
 tox = "^3.24.2"
