--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -37,9 +37,9 @@ jobs:
           repository_url: https://test.pypi.org/legacy/
         continue-on-error: false
 
-      # - name: Publish distribution to PyPI
-      #   if: github.event.action == 'published'
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     user: __token__
-      #     password: ${{ secrets.pypi_password }}
+      - name: Publish distribution to PyPI
+        if: github.event.action == 'published'
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.pypi_password }}
