--- a/.github/workflows/run-linter-and-unit-tests.yml
+++ b/.github/workflows/run-linter-and-unit-tests.yml
@@ -18,20 +18,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+    - name: Install poetry
+      run: pip install poetry
     - name: Install nislmigrate dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
+      run: poetry install
     - name: Install MongoDB
-      run: |
-        test/dlmongo.ps1
-    - name: Lint with pflake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run pflake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run pflake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with tox
-      run: |
-        poetry run tox
+      run: test/dlmongo.ps1
+    - name: Run all linters
+      run: poetry run task lint
+    - name: Run all tests
+      run: poetry run task test
