--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -35,7 +35,7 @@ jobs:
           user: __token__
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
-        continue-on-error: false
+        continue-on-error: true
 
       - name: Publish distribution to PyPI
         if: github.event.action == 'published'
