--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,15 +1,11 @@
 name: Publish Package to Test PyPI
 
 on:
-  push:
-    paths:
-      - pyproject.toml
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build-and-publish:
-    if: github.repository == 'ni/NI-SystemLink-Migrationp
+    if: github.repository == 'ni/NI-SystemLink-Migration
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +18,9 @@ jobs:
 
       - name: Install setuptools and other tools
         run: python3 -m pip install poetry
+
+      - name: Update nislmigrate release version
+        run: poetry version $(git describe --tags --abbrev=0)
 
       - name: Build packages
         run: poetry build
