--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-publish:
     if: github.repository == 'ni/NI-SystemLink-Migration'
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@master
 
@@ -19,6 +19,9 @@ jobs:
 
       - name: Install setuptools and other tools
         run: python3 -m pip install poetry
+
+      - name: Update nislmigrate release version
+        run: poetry version $(git describe --tags --abbrev=0)
 
       - name: Build packages
         run: poetry build
