--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ mypy = "^0.910"
 taskipy = "^1.8.1"
 types-requests = "^2.25.6"
 requests = "^2.26.0"
+flake8-quotes = "^3.3.0"
 
 [tool.poetry.scripts]
 nislmigrate = 'nislmigrate.migration_tool:main'
