Don't raise on failure to enable the test pipeline.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,4 +64,7 @@ whitelist_externals = poetry
 commands =
     poetry install -v
     poetry run pytest {posargs}
+passenv =
+    ProgramW6432
+    ProgramData
 """
