Encrypting salt files during migration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ taskipy = "^1.8.1"
 types-requests = "^2.25.6"
 requests = "^2.26.0"
 flake8-quotes = "^3.3.0"
+cryptography = "^35.0.0"
 
 [tool.poetry.scripts]
 nislmigrate = 'nislmigrate.migration_tool:main'
